--- a/zh-Hans/utau.html
+++ b/zh-Hans/utau.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>cvrunmin - UTAUloid</title>
 
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 </head>
 <body>
 <div class="card-deck" style="padding: 75px 5% 0 5%">
@@ -14,7 +14,7 @@
         <div class="card-body container-fluid">
             <div class="row">
                 <div class="col-lg">
-                        <img src="image/kontonne_lun_1.png" class="img-fluid">
+                        <img src="../images/kontonne_lun_1.png" class="img-fluid">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="card-body">
-            <h4 class="text-center">Usage Policy</h4>
+            <h4 class="text-center">使用规约</h4>
             <div class="container-fluid border border-warning rounded">
                 <p>
                     本段所写的利用规约适用于以下的UTAU音源及其附属角色形象。
@@ -51,11 +51,11 @@
                     <li>混沌音联</li>
                 </ul>
                 角色资料等情报请参考本页面首部分。
-                <h4>使用规约正文</h4>
+                <h3>使用规约正文</h3>
                 此音源的使用规约以UTAU中华组Wiki的<a href="http://vocawiki.net/utau:china:shiyongguiyue">公共规约</a>為基准，內容几乎與公共规约一致。除了以下项目，其他均与公共规约相同。请作参考：
                 <ol>
                     <li><h5>是否可以偏离角色设定:</h5><p>最低限度遵守以下设定：发色、年龄<br>性格设定在严重偏离时建议以衍生角色出现</p></li>
-                    <li><h5>是否可以和其他音源组成CP：</h5><p>所有管理人组成的CP组均无需报告，其他则按下列处理：<br>①NL（BG）：无需报告<br>②BL/GL：以音源角色拥有的属性判定：<br>正太、美少年：无需报告<br>其他：必须事前询问</p></li>
+                    <li><h5>是否可以和其他音源组成CP：</h5><p>所有管理人组成的CP组均无需报告，其他则按下列处理：<br>①NL（BG）：无需报告<br>②BL/GL：以音源角色拥有的萌属性判定：<br>正太、美少年：无需报告<br>其他：必须事前询问</p></li>
                     <li><h5>其他表现内容</h5><p>④是否可以更改角色的年龄：不允许(已于第1项提及)</p></li>
                 </ol>
                 </p>
@@ -70,7 +70,7 @@
                             <span class="text-center card-title">日本语</span>
                         </div>
                         <div class="card-body">
-                            <h5 class="text-center">配布视频Release video</h5>
+                            <h5 class="text-center">配布视频</h5>
                             <div class="embed-responsive-4by3">
                                 <embed class="embed-responsive-item" height="415" width="544" quality="high"
                                        allowfullscreen="true" type="application/x-shockwave-flash"
@@ -189,9 +189,9 @@
     </div>
 </div>
 
-<script src="jquery/jquery-3.2.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="js/scripts.js"></script>
-<script src="js/headerfooter.js"></script>
+<script src="../jquery/jquery-3.2.1.min.js"></script>
+<script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../js/scripts.js"></script>
+<script src="../js/headerfooter.js"></script>
 </body>
 </html>
