--- a/zh-Hant/links.html
+++ b/zh-Hant/links.html
@@ -17,18 +17,18 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-      <h3>友情連結 Link</h3>
-      連結不分先後 Links not in order<br>
+      <h3>友情連結</h3>
+      連結不分先後<br>
           <div class="card-columns">
               <div class="card">
-                  <img class="card-img-top" src="image/kaaass.PNG">
+                  <img class="card-img-top" src="../images/kaaass.PNG">
                   <div class="card-body">
                       <h4 class="card-title">KAAAsS的博客 KAAAsS's blog</h4>
                       <a href="http://blog.kaaass.net/" class="card-link">Go</a>
                   </div>
               </div>
               <div class="card">
-                  <img class="card-img-top" src="image/dfgs.PNG">
+                  <img class="card-img-top" src="../images/dfgs.PNG">
                   <div class="card-body">
                       <h4 class="card-title">風之工房——當風過時的博客 Wind Workshop</h4>
                       <a href="http://www.windworkshop.cn/" class="card-link">Go</a>
@@ -49,14 +49,14 @@
                   </div>
               </div>
               <div class="card">
-                  <img class="card-img-top" src="image/darkyoooooo.PNG">
+                  <img class="card-img-top" src="../images/darkyoooooo.PNG">
                   <div class="card-body">
                       <h4 class="card-title">Darkyoooooo的博客 Darkyoooooo's blog</h4>
                       <a href="https://darky.to2mbn.org/" class="card-link">Go</a>
                   </div>
               </div>
               <div class="card">
-                  <img class="card-img-top" src="image/tt702.PNG">
+                  <img class="card-img-top" src="../images/tt702.PNG">
                   <div class="card-body">
                       <h4 class="card-title">TT菌的部落格 TT's blog</h4>
                       <a href="http://blog.tt702.moe/" class="card-link">Go</a>
@@ -120,7 +120,7 @@
                   </div>
               </div>
               <div class="card disabled">
-              <img class="card-img-top" src="image/mcdevwiki.png">
+              <img class="card-img-top" src="../images/mcdevwiki.png">
               <div class="card-body">
                   <h4 class="card-title">MCDev Wiki</h4>
                   <!--<a href="http://www.mcdev-wiki.org/" class="card-link">Go</a>-->
