--- a/zh-Hant/index.html
+++ b/zh-Hant/index.html
@@ -16,8 +16,8 @@
         <form class="form-inline">
             <select class="custom-select" id="selectLang" onchange="onLocaleChange(this)">
                 <option value="en">English</option>
-                <option value="zh-Hans" selected>简体中文</option>
-                <option value="zh-Hant">繁體中文</option>
+                <option value="zh-Hans">简体中文</option>
+                <option value="zh-Hant" selected>繁體中文</option>
             </select>
         </form>
     </nav>
