--- a/zh-Hans/utau.html
+++ b/zh-Hans/utau.html
@@ -154,18 +154,39 @@
                             <span class="text-center card-title">RiskuCVVC 普通话</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">录制中</h4></em>
+                            <em><h4 class="text-center">测试中</h4></em>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-animated progress-bar-striped bg-warning"
-                                     role="progressbar" style="width:20%" aria-valuemax="100" aria-valuemin="0"
-                                     aria-valuenow="20"></div>
+                                <div class="progress-bar progress-bar-animated progress-bar-striped bg-success"
+                                     role="progressbar" style="width:90%" aria-valuemax="100" aria-valuemin="0"
+                                     aria-valuenow="90"></div>
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">最后更新: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 07-08-2018</em>
                         </div>
                     </div>
                 </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                            <span class="text-center card-title">CVVCantonese</span>
+                        </div>
+                        <div class="card-body">
+                            <em><h4 class="text-center">设置oto.ini中</h4></em>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-animated progress-bar-striped bg-warning"
+                                     role="progressbar" style="width:70%" aria-valuemax="100" aria-valuemin="0"
+                                     aria-valuenow="70"></div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <em class="text-muted">最后更新: 07-08-2018</em>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
